tests/fail/fail1.sps
(import (NEVERLAND))

(exit 0)
